chore: dependency updates (#1240)
* chore: drop `proto` packages

chore: move protobuf plugin and related wiring to `graalvm` module
chore: move generated protobufs to `graalvm` module
chore: drop all `proto-*` packages from project

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: omnibus dependency updates

fix: svm driver jpms flags
chore: upgrade rust toolchain → `1.85.0`
chore: upgrade rust edition → `2024`
chore: upgrade `cc` → `1.2.x`
chore: upgrade gradle → `8.13.1-rc-2`
chore: upgrade kotlin → `2.1.20-RC`
chore: upgrade netty → `4.1.118.Final`
chore: upgrade graalvm metadata → `0.3.16`
chore: upgrade boringssl → `0.20250212.0`
chore: upgrade node toolchain → `23.0.0`
chore: upgrade detekt → `1.23.8`
chore: upgrade micronaut → `4.7.6`
chore: update pkl → `0.28.x-SNAPSHOT`
chore: upgrade cloudflare zlib → latest
chore: upgrade madler zlib → latest
chore: upgrade cargo git dependencies
chore: general maven dep upgrades
chore: remove deprecated `uuid` module
chore: update dependency verification metadata
chore: update lockfiles
chore: use new interfaces for pkl
chore: use new pure-java parser for pkl

Signed-off-by: Sam Gammon <sam@elide.dev>

---------

Signed-off-by: Sam Gammon <sam@elide.dev>